<resources>
    <string name="app_name">SEAMC_2017 rECOVERED</string>
    <string name="sched">Schedule</string>
    <string name="notif">Notifications</string>
    <string name="map">Map</string>
    <string name="lead">Leaderboard</string>
    <string name="gal">Gallery</string>
    <string name="con">Contacts</string>
    <string name="fb">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="insta">Instagram</string>
    <string name="em">Emergency</string>
    <string name="sosmed">Social Media</string>
    <string name="seamc">SEAMC</string>
    <string name="seamcplus">SEAMC Plus</string>
    <string name="staff">Staff</string>
    <string name="day1">Day One</string>
    <string name="day2">Day Two</string>
    <string name="day3">Day Three</string>
</resources>
