<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffff"
    tools:context="com.example.brian.seamc_2017recovered.MainActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_time"
        android:id="@+id/imageButton"
        android:background="#00f00000"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_share"
        android:id="@+id/imageButton3"
        android:contentDescription=""
        android:background="#00f00000"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_gps"
        android:id="@+id/imageButton4"
        android:background="#00f00000"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_phone_book"
        android:id="@+id/imageButton5"
        android:background="#00f00000"
        tools:ignore="ContentDescription"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton4" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_alarm"
        android:layout_marginTop="63dp"
        android:id="@+id/imageButton8"
        android:background="#00f00000"
        tools:ignore="ContentDescription"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_landscape"
        android:id="@+id/imageButton2"
        android:background="#00f00000"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_alignTop="@+id/imageButton8"
        android:layout_alignStart="@+id/imageButton3" />

    <TextView
        android:text="@string/sched"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:gravity="center_horizontal"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/map"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignStart="@+id/imageButton4" />

    <TextView
        android:text="@string/sosmed"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/imageButton3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/em"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:gravity="center_horizontal"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/gal"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/imageButton2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/con"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:gravity="center_horizontal"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignStart="@+id/imageButton5"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_splash"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        tools:ignore="ContentDescription" />

</RelativeLayout>
