<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_numberss2"
        android:id="@+id/imageButton11"
        android:background="#00f00000"
        tools:ignore="ContentDescription"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_numberss3"
        android:layout_marginBottom="41dp"
        android:id="@+id/imageButton12"
        android:background="#00f00000"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageButton11" />

    <TextView
        android:text="@string/day2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView20" />

    <TextView
        android:text="@string/day3"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:id="@+id/textView21" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_numberss1"
        android:id="@+id/imageButton"
        android:background="#00f00000"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_above="@+id/textView18"
        android:layout_alignStart="@+id/imageButton11"
        android:layout_marginBottom="13dp" />

    <TextView
        android:text="@string/day1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:id="@+id/textView18"
        android:layout_above="@+id/imageButton11"
        android:layout_alignEnd="@+id/textView20" />
</RelativeLayout>