<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_twostaff2"
        android:id="@+id/imageButton18"
        android:background="#00f00000"
        tools:ignore="ContentDescription"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/imageButton17" />

    <TextView
        android:text="@string/day2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton19"
        android:layout_marginBottom="22dp"
        android:id="@+id/textView22"
        android:layout_alignStart="@+id/textView19"
        android:layout_alignEnd="@+id/imageButton18" />

    <TextView
        android:text="@string/day3"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:layout_marginBottom="11dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/imageButton19" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_onestaff1"
        android:id="@+id/imageButton17"
        android:contentDescription=""
        android:background="#00f00000"
        tools:ignore="ContentDescription"
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/textView19"
        android:layout_alignStart="@+id/imageButton19" />

    <TextView
        android:text="@string/day1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:id="@+id/textView19"
        android:layout_above="@+id/imageButton18"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_threestaff3"
        android:layout_marginBottom="14dp"
        android:id="@+id/imageButton19"
        android:background="#00f00000"
        android:contentDescription=""
        android:layout_above="@+id/textView23"
        android:layout_centerHorizontal="true" />
</RelativeLayout>